# dnscrypt-proxy

./: Makefile.am  configure.ac
etc/: dnscrypt-proxy.init
src/: Makefile.am
src/libevent/: Makefile.am  configure.in
src/libevent/test/: Makefile.am
src/plugins/: Makefile.am
src/plugins/example-logging/: Makefile.am  example-logging.c
src/plugins/ldns-cache/: Makefile.am  ldns-cache.c
src/proxy/: Makefile.am
